[gd_scene load_steps=6 format=2]

[ext_resource path="res://GraphGrammar/GrammarNodes/Scenes/GrammarNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://GraphGrammar/GrammarRules/RuleMaker/GrammarRuleMaker.gd" type="Script" id=2]
[ext_resource path="res://GraphGrammar/GrammarRules/Resources/GrammarRuleSave.gd" type="Script" id=3]
[ext_resource path="res://GraphGrammar/Springs/Scenes/SpringContainer.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
size = Vector2( 51.1892, 32.0204 )

[node name="GrammarRuleMaker" type="Node2D"]
script = ExtResource( 2 )
path_to_save_data = "res://GraphGrammar/GrammarRules/GrammarRuleData"
grammar_node = ExtResource( 1 )
grammar_rule_save_class = ExtResource( 3 )

[node name="LHS" type="Node" parent="."]

[node name="RHS" type="Node" parent="."]

[node name="NewRHSButton" type="Button" parent="."]
offset_left = 505.843
offset_top = 533.718
offset_right = 616.845
offset_bottom = 599.718
text = "New RHS  Node"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="NewRHSButton"]
position = Vector2( 50.2513, 30.6231 )
shape = SubResource( 1 )

[node name="NewLHSButton" type="Button" parent="."]
offset_left = 2.74005
offset_top = 532.679
offset_right = 108.74
offset_bottom = 595.679
text = "New LHS Node"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="NewLHSButton"]
position = Vector2( 50.2513, 30.6231 )
shape = SubResource( 1 )

[node name="LHSLabel" type="Label" parent="."]
offset_left = 10.7798
offset_top = 3.81738
offset_right = 490.78
offset_bottom = 17.8174
text = "Left Hand Side (Input)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RHSLabel" type="Label" parent="."]
offset_left = 514.26
offset_top = 8.11697
offset_right = 1019.26
offset_bottom = 22.117
text = "Right Hand Side (Output)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 465.0
offset_top = 3.0
offset_right = 500.0
offset_bottom = 599.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RuleName" type="LineEdit" parent="."]
offset_left = 237.04
offset_right = 398.04
offset_bottom = 24.0
placeholder_text = "Rule Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveRuleButton" type="Button" parent="."]
offset_left = 912.0
offset_top = 541.74
offset_right = 1021.0
offset_bottom = 597.74
text = "Save Rule"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpringContainer" parent="." instance=ExtResource( 4 )]

[connection signal="button_down" from="NewRHSButton" to="." method="_on_NewRHSButton_button_down"]
[connection signal="button_down" from="NewLHSButton" to="." method="_on_NewLHSButton_button_down"]
[connection signal="pressed" from="SaveRuleButton" to="." method="_on_SaveRuleButton_pressed"]
